# pytrees-rs

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  README.md  all.sh  benchmarks.sh  check_gain.sh  check_purity.sh  here  index.html  installation.html  print.html  quickstart.html  refractor.md  searchindex.js  searchindex.json  toc.html  toc.js  usage.html
.github/workflows/: doc.yml  publish.yml
doc/: book.toml
doc/src/: README.md  SUMMARY.md  installation.md  quickstart.md  usage.md
doc/src/python/: README.md  dl85.md
examples/: base_dl85.rs  basic.rs  dyntopk.rs  gain.rs  gainlds.rs  gaintopk.rs  lds.rs  lds_vite.rs  purity.rs  restart.rs  temp.rs  topk.rs
examples/anneal/: 4_lds-exponential.json  4_lds-monotonic.json
python/: dl85.html  index.html  lgdt.html
pytrees-rs/: Cargo.toml  Source.gv  example.py  exp.py  pyproject.toml  setup.py
pytrees-rs/pytrees/: __init__.py  base.py  exceptions.py  rs.py
pytrees-rs/pytrees/common/: __init__.py  enums.py  rules.py
pytrees-rs/pytrees/supervised/: __init__.py  classifier.py  dl85_classifier.py  gain_dl85_classifier.py  lds_classifier.py  lgdt.py  purity_dl85_classifier.py  restart_dl85_classifier.py  topk_classifier.py
pytrees-rs/pytrees/unsupervised/: __init__.py  clustering.py  dl85_clustering.py
pytrees-rs/src/: lib.rs  utils.rs
pytrees-rs/src/common/: enums.rs  errors.rs  mod.rs  types.rs
pytrees-rs/src/greedy/: builder.rs  mod.rs
pytrees-rs/src/optimal/: builder.rs  lds.rs  mod.rs  partial.rs  topk.rs
src/: example.rs  example_parser.rs  globals.rs  lib.rs  main.rs  parser.rs
src/algorithms/: mod.rs
src/algorithms/common/: config.rs  errors.rs  mod.rs  types.rs
src/algorithms/common/heuristics/: helpers.rs  mod.rs
src/algorithms/common/utils/: mod.rs
src/algorithms/greedy/: mod.rs
src/algorithms/greedy/lgdt/: builder.rs  factories.rs  mod.rs
src/algorithms/optimal/: mod.rs
src/algorithms/optimal/depth2/: error_minimizer.rs  info_gain_maximizer.rs  mod.rs
src/algorithms/optimal/dl85/: builder.rs  config.rs  mod.rs
src/algorithms/optimal/rules/: common.rs  composite.rs  core.rs  discrepancy.rs  gain.rs  helpers.rs  manager.rs  mod.rs  purity.rs  relaxation.rs  topk.rs
src/bitsets/: mod.rs
src/cache/: mod.rs  trie.rs
src/caching/: entry.rs  helpers.rs  key.rs  map.rs  mod.rs  trie.rs
src/cover/: mod.rs  reversible_cover.rs  similarities.rs
src/data/: binary_data.rs  mod.rs
src/heuristics/: mod.rs  rules.rs
src/parsers/: examples.rs  mod.rs
src/reader/: data_reader.rs  mod.rs
src/searches/: mod.rs  utils.rs
src/searches/common/: config.rs  mod.rs
src/searches/greedy/: lgdt.rs  mod.rs
src/searches/optimal/: mod.rs
src/searches/rules/: context.rs  manager.rs  mod.rs
src/structures/: bs.rs  dp.rs  hs.rs  mod.rs  rsbs.rs  rws.rs  types.rs
src/tree/: mod.rs
test_data/: iris.txt  rsparse_dataset.txt  small.txt  small_.txt
tests/: dl85.rs  dl85_d2.rs  dl85_d3.rs  lds_d2.rs  restart_d2.rs  restart_d3.rs
(+16 files in other folders)
