[package]
name = "dtrees-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
#debug = true
opt-level = 3


[dependencies]
ndarray = "0.15.3"
numpy = "0.20.0"
rand = "0.8.5"
search_trail = "0.1.2"
float-cmp = "0.9.0"
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.1", features = ["derive"] }
log = "0.4.20"
#serde_json = "1.0.114"
