[package]
name = "dtrees-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
#debug = true
opt-level = 3


[dependencies]
ndarray = "0.16.1"
rand = "0.9.0"
search_trail = "0.1.3"
float-cmp = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.1", features = ["derive"] }
