[package]
name = "dtrees-rs"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
#debug = true
opt-level = 3


[dependencies]
search_trail = "0.1.3"
rustc-hash = "2.1.1"
float-cmp = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.1", features = ["derive"] }
serde_json = "1.0.141"

[dev-dependencies]
paste = "1.0.15"
