[package]
name = "pytrees-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pytrees_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]
test = true

[dependencies]
ndarray = "0.15.3"
numpy = "0.20.0"
pyo3 = { version = "0.20.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dtrees-rs = {version = "0.1.0", path = ".."}



[features]
extension-module = ["pyo3/extension-module"]
