[package]
name = "pytrees-rs"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pytrees_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]
test = true

[dependencies]
numpy = "0.26.0"
pyo3 = { version = "0.26.0" }
serde_json = "1.0"
dtrees-rs = {version = "0.1.0", path = ".."}
log = "0.4.28"



[features]
extension-module = ["pyo3/extension-module"]
