[package]
name = "pytrees-rs"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pytrees_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]
test = true

[dependencies]
numpy = "0.26.0"
pyo3 = { version = "0.26.0" }
serde_json = "1.0"
dtrees-rs = {version = "1.0.0", path = ".."}



[features]
extension-module = ["pyo3/extension-module"]
